--- a/tlog-spring-boot/pom.xml
+++ b/tlog-spring-boot/pom.xml
@@ -21,6 +21,7 @@
         <module>tlog-gateway-spring-boot-starter</module>
         <module>tlog-soul-spring-boot-starter</module>
         <module>tlog-web-spring-boot-starter</module>
+        <module>tlog-xxljob-spring-boot-start</module>
     </modules>
 
 </project>
