--- a/tlog-xxl-job/pom.xml
+++ b/tlog-xxl-job/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tlog</artifactId>
         <groupId>com.yomahub</groupId>
-        <version>1.3.0</version>
+        <version>1.3.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -27,6 +27,7 @@
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
             <version>${xxl-job.version}</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
