--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <dubbox.version>2.8.4</dubbox.version>
         <dubbo.version>2.7.6</dubbo.version>
         <hutool.version>5.5.1</hutool.version>
+        <fastjson.version>1.2.70</fastjson.version>
         <commons-logging.version>1.2</commons-logging.version>
         <dom4j.version>1.6.1</dom4j.version>
         <javassist.version>3.22.0-GA</javassist.version>
@@ -115,6 +116,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>transmittable-thread-local</artifactId>
                 <version>${ttl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
             <!-- 开源社区的dubbo包 -->
             <dependency>
