--- a/tlog-core/pom.xml
+++ b/tlog-core/pom.xml
@@ -33,6 +33,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
 
         <!-- slf4j api包 -->
         <dependency>
