--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.yomahub</groupId>
     <artifactId>tlog</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.3</version>
+    <version>1.3.4</version>
     <name>tlog</name>
     <description>a lightweight log tracking framework</description>
     <url>https://github.com/bryan31/TLog</url>
@@ -69,6 +69,7 @@
         <httpclient5.version>5.1</httpclient5.version>
         <okhttp.version>3.2.0</okhttp.version>
         <xxl-job.version>2.3.0</xxl-job.version>
+        <qlexpress.version>3.2.0</qlexpress.version>
     </properties>
 
     <dependencyManagement>
@@ -120,9 +121,15 @@
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
+                <artifactId>QLExpress</artifactId>
+                <version>${qlexpress.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
             </dependency>
+
             <!-- 开源社区的dubbo包 -->
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
@@ -174,6 +181,8 @@
                 <artifactId>log4j-slf4j-impl</artifactId>
                 <version>${log4j2.version}</version>
             </dependency>
+
+            <!-- springboot依赖 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -181,6 +190,8 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- springCloud依赖 -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
