--- a/tlog-core/pom.xml
+++ b/tlog-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.yomahub</groupId>
         <artifactId>tlog</artifactId>
-        <version>1.3.3</version>
+        <version>1.3.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -83,6 +83,10 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>QLExpress</artifactId>
         </dependency>
     </dependencies>
 </project>
