--- a/tlog-spring-boot/tlog-spring-boot-configuration/pom.xml
+++ b/tlog-spring-boot/tlog-spring-boot-configuration/pom.xml
@@ -38,6 +38,12 @@
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
+            <artifactId>tlog-task</artifactId>
+            <version>${project.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
             <artifactId>tlog-xxl-job</artifactId>
             <version>${project.version}</version>
             <optional>true</optional>
