--- a/tlog-spring-boot/tlog-xxljob-spring-boot-start/pom.xml
+++ b/tlog-spring-boot/tlog-xxljob-spring-boot-start/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tlog-spring-boot</artifactId>
         <groupId>com.yomahub</groupId>
-        <version>1.3.4</version>
+        <version>1.3.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,6 +20,21 @@
         <dependency>
             <groupId>com.yomahub</groupId>
             <artifactId>tlog-xxl-job</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-task</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-httpclient</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-okhttp</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
