--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <spring.version>5.0.9.RELEASE</spring.version>
         <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-        <guava.version>19.0</guava.version>
+        <guava.version>30.1.1-jre</guava.version>
         <dubbox.version>2.8.4</dubbox.version>
         <dubbo.version>2.7.6</dubbo.version>
         <hutool.version>5.7.16</hutool.version>
